Fixed 3rd button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p class="ors">OR</p>
   </div>
   <div class="container">
-    <button type="button button1" onclick="button3()">
+    <button type="button button1" onclick="button3()" id="b3">
       Snooze the alarm
     </button>
   </div>
